# TIPE-2023-Crowd-Simulations

./: .clang-format  .gitignore  CMakeLists.txt  README.md  a.out  clean_output  flake.nix  image.c  main.c  map.c  map.h  min_heap.h  move.c  move.h  person.c  person.h  run  rungif  runmp4  tmp_data_improv
.direnv/: flake-profile-1-link
headers/: image.h  map.h  min_heap.h  move.h  person.h
maps/: 3simples_portes_obstacle.txt  double_porte.txt  essai_pv_1.txt  la_defense.txt  map_ref.txt  map_test.txt  metro_quai.txt  pv_test.txt  simple_porte.txt  simple_porte_test_obstacle.txt  test_deplacement.txt
png_to_map/: README.md  main.py
presentation_TIPE/src/: fichier_principal.aux  fichier_principal.nav  fichier_principal.out  fichier_principal.snm  fichier_principal.tex  fichier_principal.toc  fichier_principal.vrb  pythoncode.py
presentation_TIPE/src/_minted-fichier_principal/: 006967CE6A0906424654ABDAE2617389A0194AD4660A677282C38A12103CD007.pygtex  0F89B51B8A579A8839E27A9257F99BD533D9F9D49EED17214EDD6CE71B8385B2.pygtex  1CEAB84DAFDEDC026D37D337314D7CDBB63A6D8AEA23993045B7763EAC053628.pygtex  2D81C0D2C5722F73F0FC47DB217624AEB1B56E444F6905CFD7DE2E071B313A49.pygtex  60EE5DE5F4A108F03CBFCA23B3EAA14AB63A6D8AEA23993045B7763EAC053628.pygtex  6CA79B24B652C8EF16BF43A976342347E6EF3F3ADCD54AFE5E1046AB578F57A8.pygtex  85D05482C40FCE574BFCA76BA7121979B1B56E444F6905CFD7DE2E071B313A49.pygtex  962EAC825231E989C1901FD7F161F8CCAFD523976DDF5A45AA465ECAE6BA5559.pygtex  (+9 more)
scripts/: clean_output  rungif  runmp4
src/: image.c  main.c  map.c  min_heap.c  move.c  person.c
(+13 files in other folders)
